force-app/main/default/objects/Error_Log__c/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <description>Name of the Apex class where the error occurred.</description>
    <inlineHelpText>Name of the Apex class where the error occurred.</inlineHelpText>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>