force-app/main/default/objects/Error_Log__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <description>Line number where the error occurred.</description>
    <inlineHelpText>Line number where the error occurred.</inlineHelpText>
    <label>Line Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>