force-app/main/default/objects/Error_Log__c/fields/Occurred_On__c.field-meta.xml
<CustomField>
    <fullName>Occurred_On__c</fullName>
    <description>Timestamp when the error occurred</description>
    <inlineHelpText>Timestamp when the error occurred</inlineHelpText>
    <label>Occurred On</label>
    <type>DateTime</type>
</CustomField>