force-app/main/default/objects/Error_Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>Stack Trace of the error for debugging</description>
    <inlineHelpText>Stack Trace of the error for debugging</inlineHelpText>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>